ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: hasura
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    #certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
    - hosts:
        - testgamma-stack.hasura.app
      secretName: testgamma-stack-hasura-app-tls
  rules:
    - host: testgamma-stack.hasura.app
      http:
        paths:
          - path: /
            backend:
              serviceName: hasura
              servicePort: 80
